--- a/bot_test5/bot_test5/config.ini
+++ b/bot_test5/bot_test5/config.ini
@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 # vim:fileencoding=utf-8
 [AUTH]
-USERNAME = username
-PASSWORD = password
+USERNAME = 79115367325
+PASSWORD = mazafaka123
 [COUNT]
-MESSAGES = 20
+MESSAGES = 50
